# node-experiment

./: .gitignore  Dockerfile  Dockerfile_test  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml  pytest.ini
client/: entry.js  package.json
client/App/: index.jsx
client/NewItemForm/: index.jsx
client/TodoItem/: index.jsx
client/src/App/: index.jsx
client/src/TodoItem/: styles.css
server/: Dockerfile  Dockerfile_test  app.py  conftest.py  ormconfig.json  package.json  server.js  test_app.py  tsconfig.json
server/public/: entry.css  entry.css.map  entry.js  entry.js.map
server/src/: TodoItem.ts  app.test.ts  app.ts  knexfile.ts  server.ts
server/src/entity/: TodoItem.ts
server/src/migration/: 1579201862937-TodoItem.ts
server/src/views/: index.pug
server/templates/: app.html
test/: Dockerfile
