[tool.poetry]
name = "flask-experiment"
version = "0.1.0"
description = ""
authors = ["Melissa Labbe <melissa-labbe@pluralsight.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
flask-sqlalchemy = "^2.4.1"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
